<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.destrostudios.grid</groupId>
    <artifactId>grid</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <modules>
        <module>grid-bot</module>
        <module>grid-bot-client</module>
        <module>grid-client</module>
        <module>grid-game</module>
        <module>grid-network</module>
        <module>grid-server</module>
        <module>grid-shared</module>
        <module>grid-tools</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.cubes>f57a9164812a16c628c7d9fd2988a45696b6bbe8</version.cubes>
        <version.grid>0.0.1</version.grid>
        <version.guava>30.1-jre</version.guava>
        <version.jdom>2.0.6</version.jdom>
        <version.jme3>3.2.1-stable</version.jme3>
        <version.junit>4.12</version.junit>
        <version.junit5>5.7.1</version.junit5>
        <version.junit.platform>1.7.1</version.junit.platform>
        <version.groovy>3.0.10</version.groovy>
        <version.lemur>1.16.0</version.lemur>
        <version.lemur-proto>1.13.0</version.lemur-proto>
        <version.lombok>1.18.22</version.lombok>
        <version.maven-assembly-plugin>3.1.1</version.maven-assembly-plugin>
        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
        <version.maven-source-plugin>3.2.0</version.maven-source-plugin>
        <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
        <version.maven-jar-plugin>3.1.2</version.maven-jar-plugin>
        <version.mockito>4.4.0</version.mockito>
        <version.slf4j>2.0.0-alpha1</version.slf4j>
        <version.game-tools>25efd6edda2ce75c27b112ed7855ac1ae9994071</version.game-tools>
        <version.jackson>2.12.1</version.jackson>
    </properties>
    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <!--Grid-->
            <dependency>
                <groupId>com.destrostudios.grid</groupId>
                <artifactId>grid-client</artifactId>
                <version>${version.grid}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.grid</groupId>
                <artifactId>grid-game</artifactId>
                <version>${version.grid}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.grid</groupId>
                <artifactId>grid-server</artifactId>
                <version>${version.grid}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.grid</groupId>
                <artifactId>grid-shared</artifactId>
                <version>${version.grid}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.grid</groupId>
                <artifactId>grid-network</artifactId>
                <version>${version.grid}</version>
            </dependency>
            <dependency>
                <groupId>com.destrostudios.grid</groupId>
                <artifactId>grid-bot</artifactId>
                <version>${version.grid}</version>
            </dependency>
            <!--game-tools-->
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>network-shared</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>network-server</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>network-client</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>bot</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>grid</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <!--jMonkeyEngine-->
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-core</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-lwjgl</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-desktop</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-jogg</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-effects</artifactId>
                <version>${version.jme3}</version>
            </dependency>
            <!-- JUnit5 -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>${version.junit.platform}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${version.junit5}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${version.junit5}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${version.junit5}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>${version.junit5}</version>
                <scope>test</scope>
            </dependency>
            <!--Lemur-->
            <dependency>
                <groupId>com.simsilica</groupId>
                <artifactId>lemur</artifactId>
                <version>${version.lemur}</version>
            </dependency>
            <dependency>
                <groupId>com.simsilica</groupId>
                <artifactId>lemur-proto</artifactId>
                <version>${version.lemur-proto}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${version.groovy}</version>
                <type>pom</type>
            </dependency>
            <!--Cubes-->
            <dependency>
                <groupId>com.github.destroflyer.cubes</groupId>
                <artifactId>cubes</artifactId>
                <version>${version.cubes}</version>
            </dependency>
            <!--JDOM-->
            <dependency>
                <groupId>org.jdom</groupId>
                <artifactId>jdom2</artifactId>
                <version>${version.jdom}</version>
            </dependency>
            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${version.jackson}</version>
            </dependency>
            <!--Lombok-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${version.lombok}</version>
                <scope>provided</scope>
            </dependency>
            <!--JUnit-->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <!--Mockito-->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${version.mockito}</version>
                <scope>test</scope>
            </dependency>
            <!--other external frameworks-->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${version.guava}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.maven-surefire-plugin}</version>
                <configuration>
                    <workingDirectory>${session.executionRootDirectory}/workspace</workingDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${version.maven-source-plugin}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
